# uwf-rag-experiments

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: baseline.yaml
src/app/: main.py
src/rag_experiments/: ask.py  cli.py  config.py  embeddings.py  index.py  ingest.py
tests/: test_app.py  test_config.py
