[project]
name = "phase0"
version = "0.1.0"
description = "Phase 0 scaffolding"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "LoganSelner", email = "loganselner@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "httpx",
    "pre-commit",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.build.targets.sdist]
include = ["src/app", "README.md", "pyproject.toml", "LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
exclude = '^tests/'
mypy_path = ["src"]
files = ["src"]
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"
testpaths = ["tests"]
